# second

./: .gitmodules  CMakeLists.txt
cmake/: FetchCatch2.cmake  FetchFakeIT.cmake  tests.cmake
contrib/: CMakeLists.txt
scripts/: build.sh
src/: CMakeLists.txt  main.cpp
src/calculator/: calculator.cpp
src/calculator/tests/: catch2_calculator_ops.cpp
src/hw01/: hw01.cpp  hw01.hpp
src/hw01/tests/: catch2_hw01_ops.cpp
src/hw02/: Hw02.cpp  Hw02.hpp  Point.cpp  Point.hpp
src/hw02/tests/: catch2_hw02.cpp
tests/: CMakeLists.txt  runner_tests.cpp
